--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.3",
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "formik": "^2.4.6",
